kubernetes/apps/tools/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: web
  selector:
    app: it-tools
